[gd_scene load_steps=24 format=3 uid="uid://diibbc5n44ogd"]

[ext_resource type="Shader" path="res://shaders/GI.gdshader" id="1"]
[ext_resource type="Shader" path="res://shaders/LastFrameRender.gdshader" id="2"]
[ext_resource type="Shader" path="res://shaders/VoronoiSeed.gdshader" id="3"]
[ext_resource type="Shader" path="res://shaders/DistanceField.gdshader" id="4"]
[ext_resource type="Shader" path="res://shaders/DrawTexture.gdshader" id="5"]
[ext_resource type="Script" path="res://src/GI_Sprite.gd" id="6"]
[ext_resource type="Script" path="res://src/Demo.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://ba0ny8a5mcfcf" path="res://scenes/RenderTarget.tscn" id="8"]
[ext_resource type="PackedScene" path="res://scenes/Ball.tscn" id="9"]
[ext_resource type="Shader" path="res://shaders/VoronoiMultipass.gdshader" id="10"]
[ext_resource type="Texture2D" uid="uid://iv4oy0t8sf35" path="res://assets/1px.png" id="11"]
[ext_resource type="Texture2D" uid="uid://c4eq1nb77ostn" path="res://assets/circle.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dsnegmmt8ep8i" path="res://assets/noise.png" id="13"]
[ext_resource type="Texture2D" uid="uid://2f6s0np1pvnv" path="res://assets/move.png" id="14"]
[ext_resource type="Texture2D" uid="uid://t80c4s6f3wxl" path="res://assets/min.png" id="15"]
[ext_resource type="Texture2D" uid="uid://f84hvv7tc5x8" path="res://assets/info.png" id="16"]

[sub_resource type="ShaderMaterial" id="1"]
resource_local_to_scene = true
shader = ExtResource("10")
shader_parameter/u_offset = 0.0
shader_parameter/u_level = 0.0
shader_parameter/u_max_steps = 0.0

[sub_resource type="ShaderMaterial" id="2"]
resource_local_to_scene = true
shader = ExtResource("5")
shader_parameter/u_sRGB = true

[sub_resource type="ShaderMaterial" id="4"]
resource_local_to_scene = true
shader = ExtResource("3")

[sub_resource type="ShaderMaterial" id="5"]
resource_local_to_scene = true
shader = ExtResource("4")
shader_parameter/u_dist_mod = 1.0

[sub_resource type="ShaderMaterial" id="6"]
shader = ExtResource("2")

[sub_resource type="ShaderMaterial" id="7"]
shader = ExtResource("1")
shader_parameter/u_resolution = Vector2(512, 512)
shader_parameter/u_rays_per_pixel = 32.0
shader_parameter/u_dist_mod = 10.0
shader_parameter/u_bounce = true
shader_parameter/u_denoise = true
shader_parameter/u_emission_multi = 1.0
shader_parameter/u_emission_range = 2.0
shader_parameter/u_emission_dropoff = 2.0
shader_parameter/u_max_raymarch_steps = 32
shader_parameter/u_noise_data = ExtResource("13")

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(0.99982, 0.99996)

[node name="Demo" type="Node2D"]
script = ExtResource("7")
rtt_scene = ExtResource("8")
voronoi_mat = SubResource("1")
ball_scene = ExtResource("9")

[node name="Screen" type="CanvasLayer" parent="."]

[node name="Screen" type="TextureRect" parent="Screen"]
material = SubResource("2")
mouse_filter = 0
texture = ExtResource("11")
expand_mode = 1

[node name="FPS" type="Label" parent="Screen"]
offset_right = 40.0
offset_bottom = 14.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "0"

[node name="Controls" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Controls"]
layout_mode = 3
anchors_preset = 0
offset_left = 632.0
offset_top = 32.0
offset_right = 672.0
offset_bottom = 72.0

[node name="TabContainer" type="TabContainer" parent="Controls/Control"]
layout_mode = 0
offset_right = 258.0
offset_bottom = 268.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Params" type="VBoxContainer" parent="Controls/Control/TabContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="RaysPerPixel" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/RaysPerPixel"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/RaysPerPixel"]
layout_mode = 2
text = "Rays Per Pixel:"

[node name="RaysPerPixelSlider" type="HSlider" parent="Controls/Control/TabContainer/Params/RaysPerPixel"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 128.0
value = 32.0

[node name="RaysPerPixel" type="Label" parent="Controls/Control/TabContainer/Params/RaysPerPixel"]
layout_mode = 2
text = "32"

[node name="HSeparator10" type="HSeparator" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="MaxRaymarchSteps" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/MaxRaymarchSteps"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/MaxRaymarchSteps"]
layout_mode = 2
text = "Max Raymarch Steps:"

[node name="MaxRaymarchStepsSlider" type="HSlider" parent="Controls/Control/TabContainer/Params/MaxRaymarchSteps"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 128.0
value = 32.0

[node name="MaxRaymarchSteps" type="Label" parent="Controls/Control/TabContainer/Params/MaxRaymarchSteps"]
layout_mode = 2
text = "32"

[node name="HSeparator" type="HSeparator" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="DistanceMod" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/DistanceMod"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/DistanceMod"]
layout_mode = 2
text = "Distance Mod:"

[node name="DistanceModSlider" type="HSlider" parent="Controls/Control/TabContainer/Params/DistanceMod"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 50.0
step = 0.01
value = 10.0

[node name="DistanceMod" type="Label" parent="Controls/Control/TabContainer/Params/DistanceMod"]
layout_mode = 2
text = "10.0"

[node name="HSeparator2" type="HSeparator" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="EmissionMulti" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/EmissionMulti"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/EmissionMulti"]
layout_mode = 2
text = "Emission Multi:"

[node name="EmissionMultiSlider" type="HSlider" parent="Controls/Control/TabContainer/Params/EmissionMulti"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="EmissionMulti" type="Label" parent="Controls/Control/TabContainer/Params/EmissionMulti"]
layout_mode = 2
text = "1.0"

[node name="HSeparator3" type="HSeparator" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="EmissionRange" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/EmissionRange"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/EmissionRange"]
layout_mode = 2
text = "Emission Range:"

[node name="EmissionRangeSlider" type="HSlider" parent="Controls/Control/TabContainer/Params/EmissionRange"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="EmissionRange" type="Label" parent="Controls/Control/TabContainer/Params/EmissionRange"]
layout_mode = 2
text = "1.0"

[node name="HSeparator4" type="HSeparator" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="EmissionDropoff" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/EmissionDropoff"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/EmissionDropoff"]
layout_mode = 2
text = "Emission Drop-off:"

[node name="EmissionDropoffSlider" type="HSlider" parent="Controls/Control/TabContainer/Params/EmissionDropoff"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="EmissionDropoff" type="Label" parent="Controls/Control/TabContainer/Params/EmissionDropoff"]
layout_mode = 2
text = "1.0"

[node name="HSeparator5" type="HSeparator" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="LightBounce" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/LightBounce"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/LightBounce"]
layout_mode = 2
text = "Light3D Bounce:"

[node name="Container" type="Container" parent="Controls/Control/TabContainer/Params/LightBounce"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LightBounceButton" type="CheckButton" parent="Controls/Control/TabContainer/Params/LightBounce/Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0

[node name="HSeparator6" type="HSeparator" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="De-Noise" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/De-Noise"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/De-Noise"]
layout_mode = 2
text = "De-Noise:"

[node name="Container" type="Container" parent="Controls/Control/TabContainer/Params/De-Noise"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeNoiseButton" type="CheckButton" parent="Controls/Control/TabContainer/Params/De-Noise/Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0

[node name="HSeparator7" type="HSeparator" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="Physics Freeze" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/Physics Freeze"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/Physics Freeze"]
layout_mode = 2
text = "Physics Freeze:"

[node name="Container" type="Container" parent="Controls/Control/TabContainer/Params/Physics Freeze"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FreezeButton" type="CheckButton" parent="Controls/Control/TabContainer/Params/Physics Freeze/Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0

[node name="HSeparator8" type="HSeparator" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="MouseSpawn" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/MouseSpawn"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/MouseSpawn"]
layout_mode = 2
text = "Mouse Spawn Balls:"

[node name="Container" type="Container" parent="Controls/Control/TabContainer/Params/MouseSpawn"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MouseSpawnButton" type="CheckButton" parent="Controls/Control/TabContainer/Params/MouseSpawn/Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0

[node name="HSeparator9" type="HSeparator" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="Walls" type="HBoxContainer" parent="Controls/Control/TabContainer/Params"]
layout_mode = 2

[node name="Info" type="Button" parent="Controls/Control/TabContainer/Params/Walls"]
layout_mode = 2
icon = ExtResource("16")

[node name="Label" type="Label" parent="Controls/Control/TabContainer/Params/Walls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Walls:"

[node name="A" type="Label" parent="Controls/Control/TabContainer/Params/Walls"]
layout_mode = 2
text = "A"

[node name="WallColourCheck" type="CheckBox" parent="Controls/Control/TabContainer/Params/Walls"]
layout_mode = 2

[node name="B" type="Label" parent="Controls/Control/TabContainer/Params/Walls"]
layout_mode = 2
text = "B"

[node name="WallWhiteCheck" type="CheckBox" parent="Controls/Control/TabContainer/Params/Walls"]
layout_mode = 2

[node name="C" type="Label" parent="Controls/Control/TabContainer/Params/Walls"]
layout_mode = 2
text = "C"

[node name="WallBlackCheck" type="CheckBox" parent="Controls/Control/TabContainer/Params/Walls"]
layout_mode = 2

[node name="RTTs" type="VBoxContainer" parent="Controls/Control/TabContainer"]
visible = false
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Controls/Control/TabContainer/RTTs"]
layout_mode = 2

[node name="Final" type="Button" parent="Controls/Control/TabContainer/RTTs/GridContainer"]
layout_mode = 2
text = "Final"

[node name="Scene" type="Button" parent="Controls/Control/TabContainer/RTTs/GridContainer"]
layout_mode = 2
text = "Scene"

[node name="Colour" type="Button" parent="Controls/Control/TabContainer/RTTs/GridContainer"]
layout_mode = 2
text = "Colour"

[node name="Emissive" type="Button" parent="Controls/Control/TabContainer/RTTs/GridContainer"]
layout_mode = 2
text = "Emissive"

[node name="VoronoiSeed" type="Button" parent="Controls/Control/TabContainer/RTTs/GridContainer"]
layout_mode = 2
text = "Voronoi Seed"

[node name="Voronoi" type="Button" parent="Controls/Control/TabContainer/RTTs/GridContainer"]
layout_mode = 2
text = "Voronoi"

[node name="DistanceField" type="Button" parent="Controls/Control/TabContainer/RTTs/GridContainer"]
layout_mode = 2
text = "Dist-Field"

[node name="Minimise" type="Button" parent="Controls/Control"]
layout_mode = 0
offset_left = 231.0
offset_top = -1.0
offset_right = 259.0
offset_bottom = 21.0
icon = ExtResource("15")

[node name="Move" type="Button" parent="Controls/Control"]
layout_mode = 0
offset_left = 199.0
offset_top = -1.0
offset_right = 227.0
offset_bottom = 21.0
icon = ExtResource("14")

[node name="Tooltip" type="PanelContainer" parent="Controls"]
visible = false
anchors_preset = -1
anchor_right = 0.5
offset_right = -56.0
offset_bottom = 28.0

[node name="Label" type="Label" parent="Controls/Tooltip"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "This is a tooltip!"

[node name="SceneBuffer" type="SubViewport" parent="."]
transparent_bg = true
use_hdr_2d = true
render_target_update_mode = 3

[node name="VoronoiSeed" type="SubViewport" parent="."]
use_hdr_2d = true
render_target_update_mode = 3

[node name="Texture2D" type="TextureRect" parent="VoronoiSeed"]
material = SubResource("4")
texture = ExtResource("11")
expand_mode = 1

[node name="DistanceField" type="SubViewport" parent="."]
use_hdr_2d = true
render_target_update_mode = 3

[node name="Texture2D" type="TextureRect" parent="DistanceField"]
material = SubResource("5")
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11")
expand_mode = 1

[node name="LastFrameBuffer" parent="." instance=ExtResource("8")]
transparent_bg = true
use_hdr_2d = true
material = SubResource("6")

[node name="GI" parent="." instance=ExtResource("8")]
transparent_bg = true
use_hdr_2d = true
material = SubResource("7")

[node name="MainScene" type="Node2D" parent="."]

[node name="Light3D" type="Sprite2D" parent="MainScene"]
position = Vector2(127, 56)
texture = ExtResource("12")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Light3D"]
texture = ExtResource("12")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Light3D"]
texture = ExtResource("12")

[node name="Top" type="Sprite2D" parent="MainScene"]
position = Vector2(477.88, 0)
scale = Vector2(972.733, 16)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Top"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Top"]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Top"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Top/StaticBody2D"]
shape = SubResource("8")

[node name="Bottom" type="Sprite2D" parent="MainScene"]
position = Vector2(484.021, 510.561)
scale = Vector2(742.018, 16)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Bottom"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Bottom"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Bottom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Bottom/StaticBody2D"]
shape = SubResource("8")

[node name="Left" type="Sprite2D" parent="MainScene"]
position = Vector2(0, 270.716)
scale = Vector2(16, 541.431)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Left"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Left"]
modulate = Color(0, 0.505882, 1, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Left"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Left/StaticBody2D"]
shape = SubResource("8")

[node name="Right" type="Sprite2D" parent="MainScene"]
position = Vector2(960, 269.716)
scale = Vector2(16, 541.431)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Right"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Right"]
modulate = Color(0.686275, 1, 0, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Right"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Right/StaticBody2D"]
shape = SubResource("8")

[node name="Slope1" type="Sprite2D" parent="MainScene"]
position = Vector2(171.501, 124.923)
rotation = 0.275176
scale = Vector2(358.813, 9.16205)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Slope1"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Slope1"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Slope1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Slope1/StaticBody2D"]
shape = SubResource("8")

[node name="Slope3" type="Sprite2D" parent="MainScene"]
position = Vector2(574.668, 120.963)
rotation = 0.148636
scale = Vector2(275.819, 9.16205)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Slope3"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Slope3"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Slope3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Slope3/StaticBody2D"]
shape = SubResource("8")

[node name="Slope2" type="Sprite2D" parent="MainScene"]
position = Vector2(706.09, 225.548)
rotation = -0.19827
scale = Vector2(293.767, 9.16205)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Slope2"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Slope2"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Slope2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Slope2/StaticBody2D"]
shape = SubResource("8")

[node name="Slope5" type="Sprite2D" parent="MainScene"]
position = Vector2(241.207, 274.572)
rotation = 0.0214005
scale = Vector2(330.427, 9.16205)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Slope5"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Slope5"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Slope5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Slope5/StaticBody2D"]
shape = SubResource("8")

[node name="Slope6" type="Sprite2D" parent="MainScene"]
position = Vector2(473.866, 371.023)
rotation = 2.85222
scale = Vector2(168.726, 9.16205)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Slope6"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Slope6"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Slope6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Slope6/StaticBody2D"]
shape = SubResource("8")

[node name="Slope8" type="Sprite2D" parent="MainScene"]
position = Vector2(760.5, 382.543)
rotation = 3.48523
scale = Vector2(223.77, 9.16205)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Slope8"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Slope8"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Slope8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Slope8/StaticBody2D"]
shape = SubResource("8")

[node name="Slope7" type="Sprite2D" parent="MainScene"]
position = Vector2(159.709, 398.795)
rotation = 3.37109
scale = Vector2(319.743, 9.16205)
texture = ExtResource("11")
script = ExtResource("6")

[node name="EmissiveSprite" type="Sprite2D" parent="MainScene/Slope7"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="AlbedoSprite" type="Sprite2D" parent="MainScene/Slope7"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("11")

[node name="StaticBody2D" type="StaticBody2D" parent="MainScene/Slope7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainScene/Slope7/StaticBody2D"]
shape = SubResource("8")

[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/RaysPerPixel/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="value_changed" from="Controls/Control/TabContainer/Params/RaysPerPixel/RaysPerPixelSlider" to="." method="_on_RaysPerPixelSlider_value_changed"]
[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/MaxRaymarchSteps/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="value_changed" from="Controls/Control/TabContainer/Params/MaxRaymarchSteps/MaxRaymarchStepsSlider" to="." method="_on_MaxRaymarchStepsSlider_value_changed"]
[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/DistanceMod/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="value_changed" from="Controls/Control/TabContainer/Params/DistanceMod/DistanceModSlider" to="." method="_on_DistanceModSlider_value_changed"]
[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/EmissionMulti/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="value_changed" from="Controls/Control/TabContainer/Params/EmissionMulti/EmissionMultiSlider" to="." method="_on_EmissionMultiSlider_value_changed"]
[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/EmissionRange/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="value_changed" from="Controls/Control/TabContainer/Params/EmissionRange/EmissionRangeSlider" to="." method="_on_EmissionRangeSlider_value_changed"]
[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/EmissionDropoff/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="value_changed" from="Controls/Control/TabContainer/Params/EmissionDropoff/EmissionDropoffSlider" to="." method="_on_EmissionDropoffSlider_value_changed"]
[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/LightBounce/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="toggled" from="Controls/Control/TabContainer/Params/LightBounce/Container/LightBounceButton" to="." method="_on_LightBounceButton_toggled"]
[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/De-Noise/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="toggled" from="Controls/Control/TabContainer/Params/De-Noise/Container/DeNoiseButton" to="." method="_on_DeNoiseButton_toggled"]
[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/Physics Freeze/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="toggled" from="Controls/Control/TabContainer/Params/Physics Freeze/Container/FreezeButton" to="." method="_on_FreezeButton_toggled"]
[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/MouseSpawn/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="toggled" from="Controls/Control/TabContainer/Params/MouseSpawn/Container/MouseSpawnButton" to="." method="_on_MouseSpawnButton_toggled"]
[connection signal="mouse_exited" from="Controls/Control/TabContainer/Params/Walls/Info" to="." method="_on_Info_mouse_exited"]
[connection signal="toggled" from="Controls/Control/TabContainer/Params/Walls/WallColourCheck" to="." method="_on_WallColourCheck_toggled"]
[connection signal="toggled" from="Controls/Control/TabContainer/Params/Walls/WallWhiteCheck" to="." method="_on_WallWhiteCheck_toggled"]
[connection signal="toggled" from="Controls/Control/TabContainer/Params/Walls/WallBlackCheck" to="." method="_on_WallBlackCheck_toggled"]
[connection signal="pressed" from="Controls/Control/TabContainer/RTTs/GridContainer/Final" to="." method="_on_Final_pressed"]
[connection signal="pressed" from="Controls/Control/TabContainer/RTTs/GridContainer/Scene" to="." method="_on_Scene_pressed"]
[connection signal="pressed" from="Controls/Control/TabContainer/RTTs/GridContainer/Colour" to="." method="_on_Colour_pressed"]
[connection signal="pressed" from="Controls/Control/TabContainer/RTTs/GridContainer/Emissive" to="." method="_on_Emissive_pressed"]
[connection signal="pressed" from="Controls/Control/TabContainer/RTTs/GridContainer/VoronoiSeed" to="." method="_on_VoronoiSeed_pressed"]
[connection signal="pressed" from="Controls/Control/TabContainer/RTTs/GridContainer/Voronoi" to="." method="_on_Voronoi_pressed"]
[connection signal="pressed" from="Controls/Control/TabContainer/RTTs/GridContainer/DistanceField" to="." method="_on_DistanceField_pressed"]
[connection signal="pressed" from="Controls/Control/Minimise" to="." method="_on_Minimise_pressed"]
[connection signal="button_down" from="Controls/Control/Move" to="." method="_on_Move_button_down"]
